--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Project1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/IMG_4002.PNG" alt="" />
+									<img src="/read_only/images/IMG_4002.PNG" alt="" />
 									
 									
 								</div>
@@ -57,7 +57,7 @@
 									<header class="major">
 										<h2>Fruit fly detection and classification in IoT setup</h2>
 										<p>Abstract<br />
-											<a href="http://html5up.net"></a>
+											<a href="#"></a>
 										</p>
 									</header>
 									<p>This project aims to address the challenges faced by farmers and agricultural experts in identifying pests in orchards. Traditionally, visual inspection was used, which was a subjective and time-consuming process. Recent advancements in deep learning-based computer vision have shown great potential in solving problems related to image recognition and detection in agriculture. The product developed in this project targets specific fruit fly species and uses an IoT solution to provide warnings or alerts to users anywhere in the world through a mobile application.<br>
@@ -74,7 +74,7 @@
 									<p>The following is the video demonstration of our project.<p>
 									<div class="video-container" style="text-align: center;">
 										<video width="560" height="315" controls>
-											<source src="images/FYP.MP4" type="video/mp4">
+											<source src="FYP.MP4" type="video/mp4">
 											Your browser does not support the video tag.
 										</video>
 									</div>
