--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="/read_only/images/IMG_3305.JPG" alt="" /></span>
+					<span class="image avatar"><img src="images/IMG_3305.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Fasih</a></h1>
 					<p>Computer Vision for the win<br />
 					and Once you enter the realm of Computer Vision, there's no turning back.</p>
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="/read_only/images/IMG_4002.PNG" alt="" />
+									<img src="images/IMG_4002.PNG" alt="" />
 									
 									
 								</div>
@@ -70,7 +70,7 @@
 									<p>Introducing an efficient approach to address the problem of low inference speed on IoT devices (e.g NVIDIA Jetson Nano) running YOLOv5 while maintain- ing sufficient accuracy. We propose modifications to an existing YOLOv5 architecture to achieve superior results while reducing the floating point operations (FLOPs) significantly.<br>
 									I modified the existing YOLOv5s architecture to achieve 3.5GFLOPs while achieving higher map@0.5-0.95, which is the overall mean average precision at IoU values ranging from 50% to 95%. The hyperparameters ramaine d constant for comparisions. I modified the YOLOv5s architectrue at the backbone and prediction level to achieve significant drop in compuational complexity of the algorithm. This was primarily done for optimal deployment on Nvidia Jetson Nano.<br>
 									The following is a bar plot of the results achieved. The comparison shows that our proposed Yolov5 architecture namely Yolov5-FlyEye outperforms the Yolov5n and Yolov5s.The following diagram shows the comparison. We can see that our proposed Yolov5 architecture has 23% lower computational complexity with respect to Yolov5n and 78% lower computational complexity than the Yolov5s.<br><p>
-										<img src="/read_only/images/IMG_4001.jpg" alt="" style="width: 500px; height: auto;  display: block; margin: 0 auto;" />
+										<img src="images/IMG_4001.jpg" alt="" style="width: 500px; height: auto;  display: block; margin: 0 auto;" />
 									<p>The following is the video demonstration of our project.<p>
 									<div class="video-container" style="text-align: center;">
 										<video width="560" height="315" controls>
@@ -108,7 +108,7 @@
 									<p>We submitted a conference paper on the aforementioned project.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="/read_only/images/conf.png" alt="" /></a>
+											<a href="#" class="image"><img src="/images/conf.png" alt="" /></a>
 											<div class="inner">
 												<h4>Conference Paper Accepted</h4>
 												<p>Surprisingly, our paper titled "Fruit fly detection and classification in IoT setup"
