--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/IMG_3305.JPG" alt="" /></span>
+					<span class="image avatar"><img src="https://github.com/fasih0001/project1.github.io/blob/a82e157a1c5bc5aaada917a98f1239de0c07d170/images/IMG_3305.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Fasih</a></h1>
 					<p>Computer Vision for the win<br />
 					and Once you enter the realm of Computer Vision, there's no turning back.</p>
