--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="images/IMG_3305.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Fasih</a></h1>
-					<p>Computer Vision for the win<br />
-					and Once you enter the realm of Computer Vision, there's no turning back.</p>
+					<p>Computer Vision for the win!<br />
+					Once you enter the realm of Computer Vision, there's no turning back.</p>
 				</header>
 				<nav id="nav">
 					<ul>
