--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									<p>We submitted a conference paper on the aforementioned project.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="/images/conf.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/conf.png" alt="" /></a>
 											<div class="inner">
 												<h4>Conference Paper Accepted</h4>
 												<p>Surprisingly, our paper titled "Fruit fly detection and classification in IoT setup"
