--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/IMG_4002.PNG" alt="" />
+									<img src="#" alt="" />
 									
 									
 								</div>
