--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/IMG_3305.JPG" alt="" /></span>
-					<h1 id="logo"><a href="images/white.png">Fasih</a></h1>
+					<h1 id="logo"><a href="images/whitess.png">Fasih</a></h1>
 					<p>Computer Vision for the win!<br />
 					Once you enter the realm of Computer Vision, there's no turning back.</p>
 				</header>
